--- a/public/index.html
+++ b/public/index.html
@@ -53,6 +53,8 @@
     </h2>
   </div>
 
+  <iframe src="https://spreadsheets.google.com/embeddedform?formkey=dGhmcjFfQ0xneEVoOXpxMUtCY2I3UVE6MQ" width="760" height="817" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+
   <script type="text/javascript">
     var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
     document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
