format, meta tags

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
   <meta name="description"  
     content="Next-generation wine recommendations on your mobile device." />
   <meta name="author"       
-    content="John Manoogian III, Barry Seifer... and You?" />
+    content="the cats at New Cru" />
   <meta name="keywords"     
     content="wine, UX, mobile, organic, iphone, napa, san francisco, california, the creative class" />
   <meta name="verify-v1" content="gAORHxpMSfm4PKwrEawobAroGYTxj7KD92fbTMCDIDM=" />
@@ -51,9 +51,10 @@
       Enjoy the journey. 
       Drink what you like.
     </h2>
+  
+    <iframe src="https://spreadsheets.google.com/embeddedform?formkey=dGhmcjFfQ0xneEVoOXpxMUtCY2I3UVE6MQ" 
+      width="500" height="300" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
   </div>
-
-  <iframe src="https://spreadsheets.google.com/embeddedform?formkey=dGhmcjFfQ0xneEVoOXpxMUtCY2I3UVE6MQ" width="760" height="817" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
 
   <script type="text/javascript">
     var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
