--- a/public/index.html
+++ b/public/index.html
@@ -20,13 +20,22 @@
 
 <body id="home">
 
+    <script src="http://platform.twitter.com/widgets.js" type="text/javascript"></script>
+    <a href="http://twitter.com/share" class="twitter-share-button">Tweet</a>
+  
+    <iframe src="https://spreadsheets.google.com/embeddedform?formkey=dGhmcjFfQ0xneEVoOXpxMUtCY2I3UVE6MQ" 
+      width="500" height="300" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+  </div>
+
   <h1 class="strapline">NewCRU is prototyping wine experiences in the mobile space.
     <q>
       If you knew the secret ingredients in some wines,
       you'd know why they're secret.
     </q>
   </h1>
+
   <h2>Co-founded by Barry Seifer and John Manoogian III</h2>
+
   <div class="body">
     <p>
     </p>
@@ -46,15 +55,12 @@
       adding a new voice:
       <strong>Yours</strong>.
     </p>
+
     <h2 class="footer">
       Forget the hype. 
       Enjoy the journey. 
       Drink what you like.
     </h2>
-  
-    <iframe src="https://spreadsheets.google.com/embeddedform?formkey=dGhmcjFfQ0xneEVoOXpxMUtCY2I3UVE6MQ" 
-      width="500" height="300" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
-  </div>
 
   <script type="text/javascript">
     var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
