--- a/public/index.html
+++ b/public/index.html
@@ -15,17 +15,10 @@
     content="wine, UX, mobile, organic, iphone, napa, san francisco, california, the creative class" />
   <meta name="verify-v1" content="gAORHxpMSfm4PKwrEawobAroGYTxj7KD92fbTMCDIDM=" />
 
-  <link rel="stylesheet" href="/stylesheets/main.css" />
+  <link rel="stylesheet" href="./stylesheets/main.css" />
 </head>
 
 <body id="home">
-
-    <script src="http://platform.twitter.com/widgets.js" type="text/javascript"></script>
-    <a href="http://twitter.com/share" class="twitter-share-button">Tweet</a>
-  
-    <iframe src="https://spreadsheets.google.com/embeddedform?formkey=dGhmcjFfQ0xneEVoOXpxMUtCY2I3UVE6MQ" 
-      width="500" height="300" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
-  </div>
 
   <h1 class="strapline">NewCRU is prototyping wine experiences in the mobile space.
     <q>
@@ -37,8 +30,22 @@
   <h2>Co-founded by Barry Seifer and John Manoogian III</h2>
 
   <div class="body">
+
+    <script src="http://platform.twitter.com/widgets.js" type="text/javascript"></script>
+    <div>
+      <a href="http://twitter.com/share" class="twitter-share-button"
+        data-url="http://thenewcru.com"
+        data-via="newcru"
+        data-text="New Cru is a mobile wine-recommendation app. Join the beta program: "
+        data-related="newcru jm3"
+        data-count="none">
+        Tweet this
+      </a>
+    </div>
+
     <p>
     </p>
+
     <p>
       New Cru spans the gap between fans of natural, sustainably-grown
       products and the world's artisan wine growers &amp; producers.
@@ -61,6 +68,11 @@
       Enjoy the journey. 
       Drink what you like.
     </h2>
+
+    <iframe src="https://spreadsheets.google.com/embeddedform?formkey=dGhmcjFfQ0xneEVoOXpxMUtCY2I3UVE6MQ" 
+      width="500" height="300" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+
+  </div>
 
   <script type="text/javascript">
     var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
