--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     content="wine, UX, mobile, organic, iphone, napa, san francisco, california, the creative class" />
   <meta name="verify-v1" content="gAORHxpMSfm4PKwrEawobAroGYTxj7KD92fbTMCDIDM=" />
 
-  <link rel="stylesheet" href="./stylesheets/main.css" />
+  <link rel="stylesheet" href="/stylesheets/main.css" />
 </head>
 
 <body id="home">
