--- a/public/index.html
+++ b/public/index.html
@@ -31,14 +31,16 @@
 
   <div class="body">
 
+    <p>
+    </p>
+
     <script src="http://platform.twitter.com/widgets.js" type="text/javascript"></script>
     <div>
       <a href="http://twitter.com/share" class="twitter-share-button"
         data-url="http://thenewcru.com"
         data-via="newcru"
         data-text="New Cru is a mobile wine-recommendation app. Join the beta program: "
-        data-related="newcru jm3"
-        data-count="none">
+        data-related="newcru jm3">
         Tweet this
       </a>
     </div>
